--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -143,26 +143,29 @@ Correspondence concerning this article should be addressed to Hu Chuan-Peng, Lan
 \date{}
 
 \abstract{
-To navigate in a complex social world, individual has learnt to prioritize valuable information. Previous studies suggested the moral related stimuli was prioritized (Anderson, Siegel, Bliss-Moreau, \& Barrett, 2011; Gantman \& Van Bavel, 2014). Using social associative learning paradigm (self-tagging paradigm), we found that when geometric shapes, without soical meaning, were associated with different moral valence (morally good, neutral, or bad), the shapes that associated with positive moral valence were prioritized in a perceptual matching task. This patterns of results were robust across different procedures. Further, we tested whether this positive effect was modulated by self-relevance by manipulating the self-referential explicitly and found that this moral positivity effect only occured when the moral valence are self-relevant but evidence to support such effect when the moral valence are other-relevant is weak. We further found that this effect exist even when the self-relevance or the moral valence were presented as a task-irrelevant information, though the effect size become much smaller. We also tested whether the positivity effect only exist in moral domain and found that this effect was not limited to moral domain. Exploratory analyses on task-questionnaire relationship found that moral self-image score (how closely one feel they are to the ideal moral image of themselves) is positively correlated to the \emph{d'} of morally positive condition in singal detection and the drift rate using DDM, while the self-esteem is negatively correlated with \emph{d'} of neutral and morally negative conditions. These results suggest that the positive self prioritzation in perceptual decision-making may reflect \ldots{}
+To navigate in a complex social world, individual has learnt to prioritize valuable information. Previous studies suggested the moral related stimuli was prioritized (Anderson, Siegel, Bliss-Moreau, \& Barrett, 2011; Gantman \& Van Bavel, 2014). Using social associative learning paradigm (self-tagging paradigm), we found that when geometric shapes, without soical meaning, were associated with different moral valence (morally good, neutral, or bad), the shapes that associated with positive moral valence were prioritized in a perceptual matching task. This patterns of results were robust across different procedures. Further, we tested whether this positivity effect was modulated by self-relevance by manipulating the self-relevance explicitly and found that this moral positivity effect was strong when the moral valence is describing onself, but only weak evidence that such effect occured when the moral valence was describing others. We further found that this effect exist even when the self-relevance or the moral valence were presented as a task-irrelevant information, though the effect size become smaller. We also tested whether the positivity effect only exist in moral domain and found that this effect was not limited to moral domain. Exploratory analyses on task-questionnaire relationship found that moral self-image score (how closely one feel they are to the ideal moral image of themselves) is positively correlated to the \emph{d'} of morally positive condition in singal detection and the drift rate using DDM, while the self-esteem is negatively correlated with \emph{d'} of neutral and morally negative conditions. These results suggest that the positive self prioritzation in perceptual decision-making may reflect \ldots{}
 }
 
 \begin{document}
 \maketitle
 
-\hypertarget{introduction}{%
-\section{Introduction}\label{introduction}}
+\# Introduction
 
-XXXX
-In perceptual matching, same is faster than different (Farell, 1985; Krueger, 1978).
-Automatic processing (Spruyt \& Houwer, 2017)
+Perceptual decision-making is an important window for understanding the cognition (Shadlen \& Kiani, 2013).
 
-Van Zandt, Colonius, and Proctor (2000): A comparison of two response time models applied to perceptual matching
+The role of perception in social cognition has been largely ignored, but accumulating evidence revealed that perception provides rich information about our social cognition (Stolier \& Freeman, 2016; Xiao, Coppin, \& Bavel, 2016).
 
-Yakushijin, ReikoJacobs, Robert A (2020), Are People Successful at Learning Sequential Decisions on a Perceptual Matching Task?
+Here we investigated how the instantly learned moral valence changed the perceptual decision-making and the underlying psychological processes.
 
-Schooler, L. J., Shiffrin, R. M., \& Raaijmakers, J. G. W. (2001). A Bayesian model for implicit effects in perceptual identification. Psychological Review, 108(1), 257--272. \url{https://doi.org/10.1037/0033-295X.108.1.257}
+Given the importance of morality in social life (DeScioli, 2016) and identity (Freitas, Cikara, Grossmann, \& Schlegel, 2017; Strohminger, Knobe, \& Newman, 2017; Zhang, Chen, Schlegel, Hicks, \& Chen, 2019), and evidence that moral character impacts how people evaluate themselves {[}XXXX{]}, desired personality change (Sun \& Goodwin, 2020), memory (Carlson, Maréchal, Oud, Fehr, \& Crockett, 2020; Kouchaki \& Gino, 2016; Shu, Gino, \& Bazerman, 2011; Stanley \& De Brigard, 2019), one would expect that moral character, the morality related trait, will also reflected in perceptual decision-making. Yet, this effect was less studied (Anderson et al., 2011; Gantman \& Van Bavel, 2014). This moral perception effect was driven by motivation (Gantman \& Van Bavel, 2016) and influenced the information spreading online (Brady, Gantman, \& Van Bavel, 2020). Especially lacking is the process of this effect.
 
-We reported results from eleven experiments. In first set of experiments, we found that shapes associated with morally positive person label were responded faster and more accurately. In the second set of experiments, we explore the potential role of good self in perceptual matching task and added one more independent variable, we found that the effect was mainly on good self. In the third part we tested whether the morality will automatically binds with person-relevance. Finally, we explore the correlation between behavioral task and questionnaire scores.
+The current study first explored and confirmed a positive effect of moral character in perceptual decision-making, using an associative learning task, then attempted to provide a mechanistic explanation for this positivity effect: spontaenous self-identification with the moral good character (Juechems and Summerfield (2019): Self-relevance is an important dimension in determine the value, i.e., intrinsic goal), both implicitly and explicitly. Finally, this positivity effect was also found in other social traits (beauty) but not non-social, emotional states.
+
+Potential theoretical discussion points:
+Close distance of the semantic representation of self and moral character (attractor network) (Freeman \& Ambady, 2011).
+The core/true/authentic self concept.
+
+We reported behavioral results from eleven experiments. In first set of experiments, we found that shapes associated with morally positive person label were responded faster and more accurately. In the second set of experiments, we explore the potential role of good self in perceptual matching task and added one more independent variable, we found that the effect was mainly on good self. In the third part we tested whether the morality will automatically binds with self but not other. Finally, we explore the correlation between behavioral task and questionnaire scores.
 
 \hypertarget{disclosures}{%
 \section{Disclosures}\label{disclosures}}
@@ -334,13 +337,11 @@ Finally, we explored correlation between results from behavioral results and sel
 
 For the questionnaire part, we are most interested in the self-rated distance between different person and self-evaluation related questionnaires: self-esteem, moral-self identity, and moral self-image. Other questionnaires (e.g., personality) were not planned to correlated with behavioral data were not included. Note that all data were reported in (Liu et al., 2020).
 
-For the behavioral task part, we derived different indices. First, we used the mean of the RT and \emph{d'} from each participants of each condition. Second, we used three parameters from drift diffusion model: drift rate (\emph{v}), boundary separation (\emph{a}), and non decision-making time (\emph{t}). Third, we calculated the differences between different conditions (valence effect: good-self vs.~bad-self, good-self vs.~neutral-self, bad-self vs.~neutral-self; good-other vs.~bad-other, good-other vs.~neutral-other, bad-other vs.~neutral-other; Self-reference effect: good-self vs.~good-other, neutral-self vs.~neutral-other, bad-self vs.~bad-other), as indexed by Cohen's \(d\) and standard error (SE) of Cohen's \(d\).
-\[ Cohen's \space d_{z} = \frac {(M_{1} - M_{2})} {\sqrt{(SD_{1}^2 + SD_{2}^2)/2}}\]
-Given that the task difficulty were different across experiments, we z-transformed all these indices so that they become unit-free.
+For the behavioral task part, we used three parameters from drift diffusion model: drift rate (\emph{v}), boundary separation (\emph{a}), and non decision-making time (\emph{t}), because these parameters has relative clear psychological meaning. We used the mean of parameter posterior distribution as the estimate of each parameter for each participants in the correlation analysis.
 
-We used the mean of parameter posterior distribtion as the estimate of each parameter for each participants in the correlation analysis.
+Based on results form the experiment, we reason that the correlation between behavioral result in self-referential will appear in the data without mentioning the self/other (exp 3a, 3b, 6a, 7a, 7b). To this end, we first calculated the correlation between behavioral indicators and questionnaires for self-referential and other-referential separately. Given the small sample size of the data (N = ), we used a relative liberal threshold for these exploration (alpha = 0.1).
 
-We used Pearson correlation to quantify the correlation. For those correlation that is significant (\(p < 0.05\)), we further tested the robustness of the correlation using bootstrap by \texttt{BootES} package (Kirby \& Gerlanc, 2013). To avoid false positive, we further determined the threshold for significant by permutation. More specifically, for each pairs that initially with \(p < .05\), we randomly shuffle the participants data of each score and calculated the correlation between the shuffled vectors. After repeating this procedure for 5000 times, we choose arrange these 5000 correlation coefficients and use the 95\% percentile number as our threshold.
+Then we confirmed the significant results from the data without self- and other-referential (exp1a, 1b, 1c, 2, 5, 6a). In this confirmatory analysis, we used alpha = 0.05 and used bootstrap by \texttt{BootES} package (Kirby \& Gerlanc, 2013) to estimate the correlation. To avoid false positive, we further determined the threshold for significant by permutation. More specifically, for each pairs that initially with \(p < .05\), we randomly shuffle the participants data of each score and calculated the correlation between the shuffled vectors. After repeating this procedure for 5000 times, we choose arrange these 5000 correlation coefficients and use the 95\% percentile number as our threshold.
 
 \hypertarget{part-1-moral-valence-effect}{%
 \section{Part 1: Moral valence effect}\label{part-1-moral-valence-effect}}
@@ -1353,10 +1354,15 @@ See Figure \ref{fig:plot-person-dist}.
 \hypertarget{correlation-analyses}{%
 \subsection{Correlation analyses}\label{correlation-analyses}}
 
-The reliability of questionnaires can be found in (Liu et al., 2020). We calculated the correlation between the data from behavioral task and the questionnaire data.
+The reliability of questionnaires can be found in (Liu et al., 2020). We calculated the correlation between the data from behavioral task and the questionnaire data. First, we calculated the score for each scale based on their structure and factor loading, instead of sum score (McNeish \& Wolf, 2020). Then, we used SEM to estimate the correlation because it can include measurement model and statistical model in a unified framework.
 
-We focused on the task-questionnaire correlation, the results revealed that the score from three questionnaire are related to behavioral responses data.
-First, the external moral identity is positively correlated with boundary separation of moral good condition, \(r = 0.194\), 95\% CI {[}0.023 0.350{]}); the moral self image is positively correlated with the drift rate (\(r = 0.191\), 95\% CI {[}-0.016 0.354{]}) of the morally good condition. See Figure \ref{fig:plot-corr-1}.
+To make sure that what we found were not false positive, we used two method to ensure the robustness of our analysis. first, we split the data into two half: the data with self and without, then, we used the conditional random forest to find the robust correlation in the exploratory data (with self reference) that can be replicated in the confirmatory data (without the self reference). The robust correlation were then analyzed using SEM
+
+Instead of use the exploratory correlation analysis, we used a more principled way to explore the correlation between parameter of HDDM (\emph{v}, \emph{t}, and \emph{a}) and scale scores and person distance.
+
+We didn't find the correlation between scale scores and the parameters of HDDM, but found weak correlation between personal distance and the parameter estimated from Good and neutral conditions.
+
+First, boundary separation (\emph{a}) of moral good condition was correlated with both Self-Bad distance (\(r = 0.198\), 95\% CI {[}{]}, \(p = 0.0063\)) and Neutral-Bad distance (\(r = 0.1571\), 95\% CI {[}{]}, \(p = 0.031\)). At the same time, the non-decision time is negatively correlated with Self-Bad distance (\(r = 0.169\), 95\% CI {[}{]}, \(p = 0.0197\)). See Figure \ref{fig:plot-corr-1}.
 
 \begin{figure}
 \centering
@@ -1364,7 +1370,7 @@ First, the external moral identity is positively correlated with boundary separa
 \caption{\label{fig:plot-corr-1}Correlation between moral identity and boundary separation of good condition; moral self-image and drift rate of good condition}
 \end{figure}
 
-Second, we found the personal distance between self and good is positively correlated with the boundary separation of neutral condition and the self-neutral distance is negatively correlated with the boundary separation of neutral condition. See figure \ref{fig:plot-corr-2}
+Second, we found the boundary separation of neutral condition is positively correlated with the personal distance between self and good distance (\(r = 0.189\), 95\% CI {[}{]}, \(p = 0.036\)), but negatively correlated with self-neutral distance(\(r = -0.183\), 95\% CI {[}{]}, \(p = 0.042\)). Also, the drift rate of the neutral condition is positively correlated with the Self-Bad distance (\(r = 0.177\), 95\% CI {[}{]}, \(p = 0.048\)).a. See figure \ref{fig:plot-corr-2}
 
 \begin{figure}
 \centering
@@ -1372,17 +1378,7 @@ Second, we found the personal distance between self and good is positively corre
 \caption{\label{fig:plot-corr-2}Correlation between personal distance and boundary separation of neutral condition}
 \end{figure}
 
-Third, we found the self esteem score was negative correlated with the \(d'\) of bad conditions (\(r = -0.16\), 95\% CI {[}-0.277 -0.038{]}) and the neutral conditions (\(r = -.197\), 95\% CI {[}-0.348 -0.026{]}). See Figure \ref{fig:plot-corr-3}.
-
-We also explored the correlation between behavioral data and questionnaire scores separately for experiments with and without self-referential. For experiments without self-referential (Valence effect), we found the personal distance between Good-person and self is positively correlated with boundary separation of good conditions, r = 0.292, 95\% {[}0.071 0.485{]}. also personal distance between the bad and neutral person is positively correlated with non-responding time of bad and neutral conditions, r = 0.249, 0.233, respectively.
-
-For experiments with self-referential (Valence effect for the self), we found self-esteem is negatively correlated with d prime of neutral condition, r = -0.272, {[}-0.468 -0.052{]}, the self-good distance is positively correlated with d prime for Bad condition, r = 0.185, 95\%CI{[}0.004 0.354{]}.
-
-\begin{figure}
-\centering
-\includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/plot-corr-3-1.pdf}
-\caption{\label{fig:plot-corr-3}Correlation between self esteem and d prime of bad and neutral conditions}
-\end{figure}
+We also explored the correlation between behavioral data and questionnaire scores separately for experiments with and without self-referential, however, the sample size is very low for some conditions.
 
 \hypertarget{discussion-2}{%
 \section{Discussion}\label{discussion-2}}
@@ -1397,6 +1393,9 @@ For experiments with self-referential (Valence effect for the self), we found se
 \hypertarget{refs}{}
 \leavevmode\hypertarget{ref-anderson_visual_2011}{}%
 Anderson, E., Siegel, E. H., Bliss-Moreau, E., \& Barrett, L. F. (2011). The visual impact of gossip. \emph{Science}, \emph{332}(6036), 1446--1448. \url{https://doi.org/10.1126/science.1201574}
+
+\leavevmode\hypertarget{ref-brady_attentional_2020}{}%
+Brady, W. J., Gantman, A. P., \& Van Bavel, J. J. (2020). Attentional capture helps explain why moral and emotional content go viral. \emph{Journal of Experimental Psychology: General}, \emph{149}(4), 746--756. \url{https://doi.org/10.1037/xge0000673}
 
 \leavevmode\hypertarget{ref-Brainard_1997}{}%
 Brainard, D. H. (1997). The psychophysics toolbox. \emph{Spatial Vision}, \emph{10}(4), 433--436. Journal Article.
@@ -1413,9 +1412,6 @@ Cooper, H., Hedges, L. V., \& Valentine, J. C. (2009). \emph{The handbook of res
 \leavevmode\hypertarget{ref-DeCarlo_1998}{}%
 DeCarlo, L. T. (1998). Signal detection theory and generalized linear models. \emph{Psychological Methods}, \emph{3}(2), 186--205. Journal Article. \url{https://doi.org/10.1037/1082-989X.3.2.186}
 
-\leavevmode\hypertarget{ref-Farell_1985}{}%
-Farell, B. (1985). "Same"--"different" judgments: A review of current controversies in perceptual comparisons. \emph{Psychological Bulletin}, \emph{98}(3), 419--456. Journal Article. \url{https://doi.org/10.1037/0033-2909.98.3.419}
-
 \leavevmode\hypertarget{ref-faul_statistical_2009}{}%
 Faul, F., Erdfelder, E., Buchner, A., \& Lang, A.-G. (2009). Statistical power analyses using g*Power 3.1: Tests for correlation and regression analyses. \emph{Behavior Research Methods}, \emph{41}(4), 1149--1160. \url{https://doi.org/10.3758/BRM.41.4.1149}
 
@@ -1428,17 +1424,20 @@ Goh, J. X., Hall, J. A., \& Rosenthal, R. (2016). Mini meta-analysis of your own
 \leavevmode\hypertarget{ref-Hu_2020_GoodSelf}{}%
 Hu, C.-P., Lan, Y., Macrae, C. N., \& Sui, J. (2020). Good me bad me: Does valence influence self-prioritization during perceptual decision-making? \emph{Collabra: Psychology}, \emph{6}(1), 20. Journal Article. \url{https://doi.org/10.1525/collabra.301}
 
+\leavevmode\hypertarget{ref-juechems_where_2019}{}%
+Juechems, K., \& Summerfield, C. (2019). Where does value come from? \emph{Trends in Cognitive Sciences}, \emph{23}(10), 836--850. \url{https://doi.org/10.1016/j.tics.2019.07.012}
+
 \leavevmode\hypertarget{ref-kirby_bootes_2013}{}%
 Kirby, K. N., \& Gerlanc, D. (2013). BootES: An r package for bootstrap confidence intervals on effect sizes. \emph{Behavior Research Methods}, \emph{45}(4), 905--927. \url{https://doi.org/10.3758/s13428-013-0330-5}
-
-\leavevmode\hypertarget{ref-Krueger_1978}{}%
-Krueger, L. E. (1978). A theory of perceptual matching. \emph{Psychological Review}, \emph{85}(4), 278--304. Journal Article. \url{https://doi.org/10.1037/0033-295X.85.4.278}
 
 \leavevmode\hypertarget{ref-Liu_2020_JOPD}{}%
 Liu, Q., Wang, F., Yan, W., Peng, K., Sui, J., \& Hu, C.-P. (2020). Questionnaire data from the revision of a chinese version of free will and determinism plus scale. \emph{Journal of Open Psychology Data}, \emph{8}(1), 1. Journal Article. \url{https://doi.org/10.5334/jopd.49/}
 
 \leavevmode\hypertarget{ref-matzke_psychological_2009}{}%
 Matzke, D., \& Wagenmakers, E.-J. (2009). Psychological interpretation of the ex-gaussian and shifted wald parameters: A diffusion model analysis. \emph{Psychonomic Bulletin \& Review}, \emph{16}(5), 798--817. \url{https://doi.org/10.3758/PBR.16.5.798}
+
+\leavevmode\hypertarget{ref-mcneish_thinking_2020}{}%
+McNeish, D., \& Wolf, M. G. (2020). Thinking twice about sum scores. \emph{Behavior Research Methods}. \url{https://doi.org/10.3758/s13428-020-01398-0}
 
 \leavevmode\hypertarget{ref-Pelli_1997}{}%
 Pelli, D. G. (1997). The videotoolbox software for visual psychophysics: Transforming numbers into movies. \emph{Spatial Vision}, \emph{10}(4), 437--442. Journal Article.
@@ -1452,17 +1451,11 @@ Rousselet, G. A., \& Wilcox, R. R. (2019). Reaction times and other skewed distr
 \leavevmode\hypertarget{ref-Simmons_2013_life}{}%
 Simmons, J. P., Nelson, L. D., \& Simonsohn, U. (2013). Life after p-hacking. Conference Proceedings. \url{https://doi.org/10.2139/ssrn.2205186}
 
-\leavevmode\hypertarget{ref-Spruyt_de_Houwer_2017}{}%
-Spruyt, A., \& Houwer, J. D. (2017). On the automaticity of relational stimulus processing: The (extrinsic) relational simon task. \emph{PLoS One}, \emph{12}(10), e0186606. Journal Article. \url{https://doi.org/10.1371/journal.pone.0186606}
-
 \leavevmode\hypertarget{ref-Stanislaw_Todorov_1999}{}%
 Stanislaw, H., \& Todorov, N. (1999). Calculation of signal detection theory measures. \emph{Behavior Research Methods, Instruments, \& Computers}, \emph{31}(1), 137--149. Journal Article. \url{https://doi.org/10.3758/BF03207704}
 
 \leavevmode\hypertarget{ref-Sui_2012_JEPHPP}{}%
 Sui, J., He, X., \& Humphreys, G. W. (2012). Perceptual effects of social salience: Evidence from self-prioritization effects on perceptual matching. \emph{Journal of Experimental Psychology: Human Perception and Performance}, \emph{38}(5), 1105--1117. Journal Article. \url{https://doi.org/10.1037/a0029792}
-
-\leavevmode\hypertarget{ref-van_zandt_comparison_2000}{}%
-Van Zandt, T., Colonius, H., \& Proctor, R. W. (2000). A comparison of two response time models applied to perceptual matching. \emph{Psychonomic Bulletin \& Review}, \emph{7}(2), 208--256. \url{https://doi.org/10.3758/BF03212980}
 
 \leavevmode\hypertarget{ref-wiecki_hddm_2013}{}%
 Wiecki, T. V., Sofer, I., \& Frank, M. J. (2013). HDDM: Hierarchical bayesian estimation of the drift-diffusion model in python. \emph{Frontiers in Neuroinformatics}, \emph{7}. \url{https://doi.org/10.3389/fninf.2013.00014}
